Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -163,4 +163,9 @@ footer p {
     main ul li {
         font-size: 16px;
     }
+
+    main form {
+        padding-right: 0;
+        padding-left: 0;
+    }
 }
